Fix sessions